# charre

./: .editorconfig  .gitignore  README.md  notes.md  pyproject.toml
.github/workflows/: ci.yaml
api/: Dockerfile  README.md  compose.yaml  helpers.py  main.py  mock.py  models.py  requirements.txt
api/bruno/: Labels.bru
api/feedback/: helpers.py  mock.py  models.py  mongo.py
app/: Dockerfile  README.md  app.py  requirements.txt
feedback/: .dockerignore  Dockerfile  README.md  flush.py  main.py  mock.py  openapi.yaml  requirements.txt  test.sh
feedback/bruno/: Feedback Item.bru  Feedback.bru  Feedbacks.bru
feedback/feedback/: helpers.py  models.py  mongo.py
kubernetes/: deployment_app.yaml  deployment_feedback.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  network_policies.yaml  pvc_mongodb.yaml  service_app.yaml  service_feedback.yaml  service_mongodb.yaml  statefulset_mongodb.yaml
modal/: README.md  basic.py  test.sh
modal/models/: test.py
production/: README.md  config.yaml
sandbox/: README.md  config.json  data_preparation.py  finetuning.ipynb  image_downloader.py  main.py  notes.txt  predict.py  preparations.py  requirements.txt  test_model.ipynb  validation.csv
