[project]
name = "charre"
version = "0.1.0"
description = "MLOPS Project"
readme = "README.md"
requires-python = "<3.13,>=3.12"

dependencies = []

[dependency-groups]
api = [
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "gunicorn>=23.0.0",
    "pydantic>=2.11.3",
    "pymongo>=4.12.0",
]
app = [
    "requests>=2.28.1",
    "streamlit>=1.44.1",
]
modal = []
sandbox = [
    "kagglehub>=0.3.11",
    "pillow>=11.1.0",
    "torch>=2.6.0",
    "transformers>=4.51.2",
]
