[project]
name = "charre"
version = "0.1.0"
description = "MLOPS Project"
readme = "README.md"
requires-python = "<3.13,>=3.12"

dependencies = []

[dependency-groups]
api = [
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "gunicorn>=23.0.0",
    "pydantic>=2.11.3",
    "pymongo>=4.12.0",
]
app = [
    "requests>=2.28.1",
    "streamlit>=1.44.1",
]
modal = []
sandbox = [
    "kagglehub>=0.3.11",
    "pillow>=11.1.0",
    "torch>=2.6.0",
    "transformers>=4.51.2",
]

dev = [
    "mypy>=1.15.0",
    "poethepoet>=0.33.1",
    "ruff>=0.11.5",
]

[tool.poe.tasks]
format = {shell = "ruff format && ruff check --fix"}
lint = {shell = "ruff check"}
types = {shell = "mypy ."}
all = {shell = "poe format && poe lint && poe types"}

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
# exclude all except api as other devs might not use uv
exclude = [".venv/", "tests/", "conftest.py", "modal/", "production/", "sandbox/"]

[tool.ruff]
# exclude all except api as other devs might not use uv
extend-exclude = ["modal/", "production/", "sandbox/"]

[tool.ruff.lint]
extend-ignore = ["E501"]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]
